<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CapaCity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recent_search_page">RecentSearchPage</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_search_location_page">SearchLocationPage</string>
    
    
    <!-- Search Page -->
    
    <string name="search_title">Find Restaurants&#8230;</string>
    <string name="search_button_send">Go</string>
    
    <string name="prefs_title">Preferences</string>
    <string name="pref1">Open Now</string>
    <string name="pref2">Delivery</string>
    <string name="pref3">Reservation</string>
    
    <string name="price_title">Price</string>
    <string name="price1">$</string>
    <string name="price2">$$</string>
    <string name="price3">$$$</string>
    <string name="price4">$$$$</string>
    
    <string name="dist_title">Distance (km)</string>
    <string name="dist1">1</string>
    <string name="dist2">3</string>
    <string name="dist3">5</string>
    <string name="dist4">10</string>

</resources>
